Cleanup pipelane and add projectconfig for dev autodeploy

--- a/kargo/warehouse.yaml
+++ b/kargo/warehouse.yaml
@@ -5,22 +5,28 @@ metadata:
   namespace: kargo-helm
 spec:
   subscriptions:
-  - image:
-      repoURL: ghcr.io/mikael-lindstrom/guestbook
-      imageSelectionStrategy: SemVer
-
----
-apiVersion: kargo.akuity.io/v1alpha1
-kind: Warehouse
-metadata:
-  name: features
-  namespace: kargo-helm
-spec:
-  subscriptions:
-  - git:
-      branch: main
-      commitSelectionStrategy: NewestFromBranch
-      discoveryLimit: 20
-      repoURL: https://github.com/mikael-lindstrom/kargo-helm.git
-      includePaths:
-      - base/feature-flags.yaml
+    - image:
+        repoURL: ghcr.io/mikael-lindstrom/guestbook
+        imageSelectionStrategy: SemVer
+    - git:
+        branch: main
+        commitSelectionStrategy: NewestFromBranch
+        discoveryLimit: 20
+        repoURL: https://github.com/mikael-lindstrom/kargo-helm.git
+        includePaths:
+          - base/feature-flags.yaml
+# ---
+# apiVersion: kargo.akuity.io/v1alpha1
+# kind: Warehouse
+# metadata:
+#   name: features
+#   namespace: kargo-helm
+# spec:
+#   subscriptions:
+#   - git:
+#       branch: main
+#       commitSelectionStrategy: NewestFromBranch
+#       discoveryLimit: 20
+#       repoURL: https://github.com/mikael-lindstrom/kargo-helm.git
+#       includePaths:
+#       - base/feature-flags.yaml
