--- a/kargo/projectconfig.yaml
+++ b/kargo/projectconfig.yaml
@@ -8,3 +8,6 @@ spec:
     - stageSelector:
         name: dev
       autoPromotionEnabled: true
+    - stageSelector:
+        name: staging
+      autoPromotionEnabled: true
