--- a/kargo/stages.yaml
+++ b/kargo/stages.yaml
@@ -22,12 +22,12 @@ spec:
               value: env/dev
             - name: argocdApp
               value: kargo-helm-dev
-  # verification:
-  #   analysisTemplates:
-  #     - name: pokemon-xp
-  #   args:
-  #     - name: pokemon
-  #       value: pikachu
+  verification:
+    analysisTemplates:
+      - name: pokemon-xp
+    args:
+      - name: pokemon
+        value: pikachu
 
 ---
 apiVersion: kargo.akuity.io/v1alpha1
